--- a/image/Dockerfile
+++ b/image/Dockerfile
@@ -7,6 +7,7 @@ ADD . /build
 ENV PG_MAJOR 9.4
 ENV POSTGIS_VERSION 2.1
 ENV POSTGRES_PASSWORD ""
+ENV PGDATA /var/lib/postgresql/data
 ENV SYSLOG_SERVER ""
 
 RUN /build/prepare.sh && \
